wrap up gui work

--- a/locale/en/inventory-sensor.cfg
+++ b/locale/en/inventory-sensor.cfg
@@ -28,3 +28,9 @@ hps__is-inventory-sensor=Scans for nearby entities that have inventories or cont
 
 [recipe-name]
 hps__is-inventory-sensor=Inventory Sensor
+
+[hps__is-gui]
+inv-status-label=Status:
+connected=connected to: __1__
+scanning=scanning
+disabled=disabled
