wrap up gui work

--- a/locale/en/inventory-sensor.cfg
+++ b/locale/en/inventory-sensor.cfg
@@ -31,6 +31,6 @@ hps__is-inventory-sensor=Inventory Sensor
 
 [hps__is-gui]
 inv-status-label=Status:
-connected=connected to: __1__
+reading=reading __1__
 scanning=scanning
 disabled=disabled
