--- a/locale/en/inventory-sensor.cfg
+++ b/locale/en/inventory-sensor.cfg
@@ -29,6 +29,17 @@ hps__is-inventory-sensor=Scans for nearby entities that have inventories or cont
 [recipe-name]
 hps__is-inventory-sensor=Inventory Sensor
 
+[virtual-signal-name]
+inv-sensor-detected-locomotive=Locomotive Detected
+inv-sensor-detected-wagon=Cargo Wagon Detected
+inv-sensor-detected-car=Car Detected
+inv-sensor-detected-tank=Tank Detected
+inv-sensor-detected-spider=Spidertron Detected
+inv-sensor-temperature=Temperature
+inv-sensor-progress=Crafting Progress
+inv-sensor-fuel=Remaining fuel (MJ)
+inv-sensor-charge=Charge Level
+
 [hps__is-gui]
 inv-status-label=Status:
 reading=reading __1__
