move equipment grid control to gui

--- a/locale/en/inventory-sensor.cfg
+++ b/locale/en/inventory-sensor.cfg
@@ -2,7 +2,6 @@
 hps__is-debug-mode=Debugging Mode
 hps__is-update_interval=Update interval (in ticks)
 hps__is-find_entity_interval=Entity scan interval (in ticks)
-hps__is-read_equipment_grid=Read vehicle equipment grid
 hps__is-scan_offset=Scan offset
 hps__is-scan_range=Scan range
 
@@ -10,7 +9,6 @@ hps__is-scan_range=Scan range
 hps__is-debug-mode=Enable debug functionality. Only turn on if you debug this mod.
 hps__is-update_interval=How often the inventory is updated.
 hps__is-find_entity_interval=Scan interval for new entities if none has been found.
-hps__is-read_equipment_grid=Read equipment grid. Turn off to improve performance.
 hps__is-scan_offset=Width of the search area in front of a sensor.\nWARNING! Changing this may affect entity detection!
 hps__is-scan_range=Size of the search area in front of a sensor.\nWARNING! Changing this may affect entity detection!
 
@@ -45,3 +43,4 @@ inv-status-label=Status:
 reading=reading __1__
 scanning=scanning
 disabled=disabled
+read-grid=Read equipment grid (if present)
