add startup replacement option

--- a/locale/en/inventory-sensor.cfg
+++ b/locale/en/inventory-sensor.cfg
@@ -4,6 +4,7 @@ hps__is-update_interval=Update interval (in ticks)
 hps__is-find_entity_interval=Entity scan interval (in ticks)
 hps__is-scan_offset=Scan offset
 hps__is-scan_range=Scan range
+hps__is-update_inventory_sensors=Update old Inventory sensor entities
 
 [mod-setting-description]
 hps__is-debug-mode=Enable debug functionality. Only turn on if you debug this mod.
@@ -11,6 +12,7 @@ hps__is-update_interval=How often the inventory is updated.
 hps__is-find_entity_interval=Scan interval for new entities if none has been found.
 hps__is-scan_offset=Width of the search area in front of a sensor.\nWARNING! Changing this may affect entity detection!
 hps__is-scan_range=Size of the search area in front of a sensor.\nWARNING! Changing this may affect entity detection!
+hps__is-update_inventory_sensors=[WARNING] Update all existing old Inventory Sensors (https://mods.factorio.com/mod/Inventory%20Sensor). Loading a game after turning this setting on will replace all entities. After saving the game, it can be turned off again.
 
 [entity-name]
 hps__is-inventory-sensor=Inventory Sensor
