update migration code

--- a/locale/en/inventory-sensor.cfg
+++ b/locale/en/inventory-sensor.cfg
@@ -46,3 +46,4 @@ reading=reading __1__
 scanning=scanning
 disabled=disabled
 read-grid=Read equipment grid (if present)
+migration=Migrated __1__ Inventory Sensors on __2__ (__3__).
