add info icon for GUI tooltip

--- a/locale/en/inventory-sensor.cfg
+++ b/locale/en/inventory-sensor.cfg
@@ -46,6 +46,6 @@ reading=reading __1__
 scanning=scanning
 disabled=disabled
 read-grid=Read equipment grid (if present)
-inventory-status-signals=Generate inventory status signals
+inventory-status-signals=Generate inventory status signals [img=info]
 inventory-status-signals-tooltip=Provides additional status signals for inventories:\n[virtual-signal=signal-B] - slot number for the "red bar" (blocked slots)\n[virtual-signal=signal-E] - Sum of all empty slots in the inventories\n[virtual-signal=signal-F] - Sum of all used slots in the inventories\n[virtual-signal=signal-T] - Total number of slots in all inventories\n[virtual-signal=signal-P] - Percentage of slots used (ignoring filtered and blocked slots) across all inventories\n[virtual-signal=signal-X] - Total number of filtered slots (in inventories that use a filter)\n[virtual-signal=signal-I] - Total number of items in all inventories\n[virtual-signal=signal-D] - Number of empty fluid boxes\n[virtual-signal=signal-A] - Number of fluid boxes that contain fluids\n[virtual-signal=signal-C] - Total number of fluid boxes\n[virtual-signal=signal-V] - Total fluid capacity across all fluid boxes\n[virtual-signal=signal-L] - Total amount of fluid across all fluid boxes\n[virtual-signal=signal-Q] - Percentage of fluid capacity used
 migration=Migrated __1__ Inventory Sensors on __2__ (__3__).
