Refactoring for multi-inventories
WIP

--- a/locale/en/inventory-sensor.cfg
+++ b/locale/en/inventory-sensor.cfg
@@ -41,11 +41,38 @@ inv-sensor-fuel=Remaining fuel (MJ)
 inv-sensor-charge=Charge Level
 
 [hps__is-gui]
-inv-status-label=Status:
-reading=reading __1__
+id=Id: __1__
+status-label=Status:
+reading=reading __1__ (Id: __2__)
 scanning=scanning
 disabled=disabled
 read-grid=Read equipment grid (if present)
+inventories-heading=Available Inventories
 inventory-status-signals=Generate inventory status signals [img=info]
 inventory-status-signals-tooltip=Provides additional status signals for inventories:\n[virtual-signal=signal-B] - slot number for the "red bar" (blocked slots)\n[virtual-signal=signal-E] - Sum of all empty slots in the inventories\n[virtual-signal=signal-F] - Sum of all used slots in the inventories\n[virtual-signal=signal-T] - Total number of slots in all inventories\n[virtual-signal=signal-P] - Percentage of slots used (ignoring filtered and blocked slots) across all inventories\n[virtual-signal=signal-X] - Total number of filtered slots (in inventories that use a filter)\n[virtual-signal=signal-I] - Total number of items in all inventories\n[virtual-signal=signal-D] - Number of empty fluid boxes\n[virtual-signal=signal-A] - Number of fluid boxes that contain fluids\n[virtual-signal=signal-C] - Total number of fluid boxes\n[virtual-signal=signal-V] - Total fluid capacity across all fluid boxes\n[virtual-signal=signal-L] - Total amount of fluid across all fluid boxes\n[virtual-signal=signal-Q] - Percentage of fluid capacity used
 migration=Migrated __1__ Inventory Sensors on __2__ (__3__).
+inventory-name-charge=Charge
+inventory-name-crafting_progress=Crafting Progress
+inventory-name-grid=Grid
+inventory-name-research_progress=Research Progress
+inventory-name-silo_progress=Rocket Progress
+inventory-name-contents=Contents
+inventory-name-ammo=Ammunition
+inventory-name-trash=Trash
+inventory-name-cargo=Cargo
+inventory-name-input=Input
+inventory-name-output=Output
+inventory-name-modules=Modules
+inventory-name-dump=Dump
+inventory-name-fuel=Fuel
+inventory-name-burnt_result=Burnt result
+inventory-name-lab_input=Science Packs
+inventory-name-roboport_robot=Robots
+inventory-name-roboport_material=Material
+inventory-name-rocket_silo_rocket=Rocket Inventory
+inventory-name-rocket_silo_trash=Rocket Trash
+report-quantity=Quantity
+report-quantity-description=Number of items
+report-one=1
+report-invert=Invert Values
+report-invert-description=Use negative values
