only virtual signals missing

--- a/locale/en/inventory-sensor.cfg
+++ b/locale/en/inventory-sensor.cfg
@@ -54,6 +54,7 @@ migration=Migrated __1__ Inventory Sensors on __2__ (__3__).
 inventory-name-charge=Charge
 inventory-name-crafting_progress=Crafting Progress
 inventory-name-grid=Grid
+inventory-name-trunk=Trunk
 inventory-name-fluid=Fluids
 inventory-name-research_progress=Research Progress
 inventory-name-silo_progress=Rocket Progress
