--- a/locale/en/inventory-sensor.cfg
+++ b/locale/en/inventory-sensor.cfg
@@ -37,6 +37,7 @@ inv-sensor-detected-tank=Tank Detected
 inv-sensor-detected-spider=Spidertron Detected
 inv-sensor-temperature=Temperature
 inv-sensor-progress=Crafting Progress
+inv-sensor-speed=Speed
 inv-sensor-fuel=Remaining fuel (MJ)
 inv-sensor-charge=Charge Level
 
@@ -67,12 +68,13 @@ inventory-name-output=Output
 inventory-name-modules=Modules
 inventory-name-dump=Dump
 inventory-name-fuel=Fuel
-inventory-name-burnt_result=Burnt result
+inventory-name-burnt_result=Spent fuel
 inventory-name-lab_input=Science Packs
 inventory-name-roboport_robot=Robots
-inventory-name-roboport_material=Material
+inventory-name-roboport_material=Repair Packs
 inventory-name-rocket_silo_rocket=Rocket Inventory
 inventory-name-rocket_silo_trash=Rocket Trash
+inventory-name-arm=Arm
 report-quantity=Quantity
 report-quantity-description=Number of items
 report-one=1
