generator shows output power

--- a/locale/en/inventory-sensor.cfg
+++ b/locale/en/inventory-sensor.cfg
@@ -38,6 +38,7 @@ inv-sensor-detected-spider=Spidertron Detected
 inv-sensor-temperature=Temperature
 inv-sensor-progress=Crafting Progress
 inv-sensor-speed=Speed
+inv-sensor-power=Power
 inv-sensor-fuel=Remaining fuel (MJ)
 inv-sensor-charge=Charge Level
 
